Fix clipping of labels on donation values

--- a/src/stylesheets/components/_checkbox-and-radio.scss
+++ b/src/stylesheets/components/_checkbox-and-radio.scss
@@ -147,6 +147,8 @@ fieldset ul {
 
   width: 100%;
   overflow: hidden;
+  overflow-x: clip;
+  overflow-y: visible;
 
   font-size: ms(0);
   line-height: 0.9;
